--- a/apps/front/app/globals.css
+++ b/apps/front/app/globals.css
@@ -13,3 +13,21 @@
 .red-gradient {
   background: linear-gradient(180deg, #ff946d 0%, #ff7d68 100%);
 }
+
+.testimonial {
+  position: relative;
+  border: 3px solid #f2f2f2;
+  padding: 21px 28px 32px;
+  margin: 0 0 20px;
+}
+
+.testimonial:after {
+  content: '';
+  position: absolute;
+  left: 62px;
+  bottom: -33px;
+  width: 30px;
+  height: 33px;
+  background: url(/images/testimonials_before.png) no-repeat;
+  background-size: 15px 18px;
+}
